Colaboratory를 통해 생성됨

--- a/yolov5_july16_05_AM.ipynb
+++ b/yolov5_july16_05_AM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPCU310Gv2grG3joitlR7Ww",
+      "authorship_tag": "ABX9TyO4JCtfrOFkSzUWh54xRuDL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "!pip install roboflow\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"tTGL7abYOkWcNRxTd4Yz\")\n",
+        "rf = Roboflow(api_key=\"\")\n",
         "#project = rf.workspace().project(\"프로젝트명입력\")\n",
         "project = rf.workspace(\"sule-mese\").project(\"pool-joat4\")\n",
         "#dataset = project.version(버전입력).download(\"yolov5\")\n",
@@ -103,8 +103,7 @@
         "\tf.write('\\n'.join(train_img_list) + '\\n')\n",
         "\n",
         "with open('./valid.txt', 'w') as f:\n",
-        "\tf.write('\\n'.join(valid_img_list) + '\\n')\n",
-        ""
+        "\tf.write('\\n'.join(valid_img_list) + '\\n')\n"
       ],
       "metadata": {
         "id": "yoBGpwSPjbVp"
